Closed Bug 696362 Opened 14 years ago Closed 14 years ago

OpenDatabaseHelper's dtor can release objects on the wrong thread.

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla10

People

(Reporter: khuey, Assigned: khuey)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch Patch (obsolete) — Splinter Review
No description provided.
Attachment #568639 - Flags: review?(bent.mozilla)
Attached patch PatchSplinter Review
Something more like this, perhaps?
Assignee: nobody → khuey
Attachment #568639 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #568639 - Flags: review?(bent.mozilla)
Attachment #568741 - Flags: review?(bent.mozilla)
Comment on attachment 568741 [details] [diff] [review] Patch Review of attachment 568741 [details] [diff] [review]: ----------------------------------------------------------------- ::: dom/indexedDB/AsyncConnectionHelper.h @@ +74,5 @@ > HelperBase(IDBRequest* aRequest) > : mRequest(aRequest) > { } > > + ~HelperBase(); Definitely make this virtual. @@ +197,5 @@ > * Gives the subclass a chance to release any objects that must be released > * on the main thread, regardless of success or failure. Subclasses that > * implement this method *MUST* call the base class implementation as well. > */ > + void ReleaseMainThreadObjects(); Why this change? Leave it virtual (aids understanding).
Attachment #568741 - Flags: review?(bent.mozilla) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla10
I think bug 696338 was caused by this?
Blocks: 696338
ah sorry, missed the duping, somehow
No longer blocks: 696338
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: