Bug 696362: OpenDatabaseHelper can release objects on the wrong thread. r=bent