dom/indexedDB/AsyncConnectionHelper.h
@@ -75,6 +75,8 @@ protected:
     : mRequest(aRequest)
   { }
 
+  virtual ~HelperBase();
+
   /**
    * Helper to wrap a native into a jsval. Uses the global object of the request
    * to parent the native.
@@ -82,6 +84,13 @@ protected:
   nsresult WrapNative(JSContext* aCx,
                       nsISupports* aNative,
                       jsval* aResult);
+
+  /**
+   * Gives the subclass a chance to release any objects that must be released
+   * on the main thread, regardless of success or failure. Subclasses that
+   * implement this method *MUST* call the base class implementation as well.
+   */
+  virtual void ReleaseMainThreadObjects();
 
   nsRefPtr<IDBRequest> mRequest;
 };
